--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <p>Phase de test Git/Github</p>
 
         <h1>Phase de test Git/Github</h1>
+
+        <h2>Phase de test Git/Github</h2>
     
     </body>
 </html>
