Suite des tests pour push Git vers GitHub

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     </head>
 
     <body>
-        <p>Phase de test Git/Github</p>
 
         <h1>Phase de test Git/Github</h1>
 
         <h2>Phase de test Git/Github</h2>
+
+        <h3>Phase de test Git/Github</h2>
+
+        <p>Phase de test Git/Github</p>
     
     </body>
 </html>
