--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <h3>Phase de test Git/Github</h2>
 
         <p>Phase de test Git/Github</p>
+
+        <p>Phase de test Git/Github</p>
     
     </body>
 </html>
