--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head><!-- Titre de la page et informations encodage, ect...-->
+        <!-- L’élément HTML meta est utilisé pour définir des métadonnées pour un document HTML.
+         Une métadonnée est une donnée qui ne va pas être affiché sur la page mais qui va pouvoir servir aux différents
+         robots pour comprendre et afficher la page.-->
         <meta charset="utf-8" /> <!-- Encodage UTF-8 qui gère l'affichage des caractères speciaux-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"><!--Contrôle de l'affichage pour les petits écrans-->
+        <link rel="stylesheet" href="css/normalize.css" /><!-- Chargement du fichier Css associé-->
         <link rel="stylesheet" href="css/style.css" /><!-- Chargement du fichier Css associé-->
-        <title>Acceuil Booki</title> <!-- Très important, c'est ce qui s'affiche dans les résultats de recherche.-->
+        <link rel="stylesheet" href="assets/icones/css/all.css" /> <!--Chargement icones Font Awesome -->
+        <title>Ajouter un titre</title> <!-- Très important, c'est ce qui s'affiche dans les résultats de recherche.-->
     </head>
 
     <body>
 
-        <h1>Phase de test Git/Github</h1>
-
-        <h2>Phase de test Git/Github</h2>
-
-        <h3>Phase de test Git/Github</h2>
-
-        <p>Phase de test Git/Github</p>
-
-        <p>Phase de test Git/Github</p>
+         
     
     </body>
 </html>
