--- a/index.html
+++ b/index.html
@@ -42,8 +42,15 @@
                 </div>
             </div>
             <div id="filter-bloc">
-            
+                <p>Filtres</p>     
+                <div id="filters">
+                    <div class="filtericons-container"><span class="ico-background"><span id="eco-icon"></span></span>Économique</div>
+                    <div class="filtericons-container"><span class="ico-background"><span id="kid-icon"></span></span>Familial</div>
+                    <div class="filtericons-container"><span class="ico-background"><span id="love-icon"></span></span>Romantique</div>
+                    <div class="filtericons-container"><span class="ico-background"><span id="dog-icon"></span></span>Animaux autorisés</div>
+                </div>
             </div>
+            <div class="info"><span class="info-ico-background"><span id="info-icon"></span></span><p>Plus de 500 logements sont disponibles dans cette ville</p></div>
         </section>            
 
       </main>
