--- a/index.html
+++ b/index.html
@@ -52,7 +52,26 @@
             </div>
             <div class="info"><span class="info-ico-background"><span id="info-icon"></span></span><p>Plus de 500 logements sont disponibles dans cette ville</p></div>
         </section>            
+        <section class="lodgingcards-bloc">
+            <h1>Hébergements à Marseille</h1>
+            <div id="lodging-cards">
+                <div class="lodginginfos-container">
+                    <div class="lodgings-img-container">
+                        <img id="large-cannebiere-img" src="assets/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Image Auberge La Cannebière" >
+                    </div>
+                    <div class="lodgings-text-container">
+                        <h3>Auberge La Cannebière</h3>
+                        <p>Nuit à partir de 25€</p>
+                        <span class="bluestar-ico"><span class="greystar-ico"></span></span>
+                    </div>
+                </div>
 
+
+
+            </div>
+
+
+        </section>
       </main>
 
       <footer>
