--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
          Une métadonnée est une donnée qui ne va pas être affiché sur la page mais qui va pouvoir servir aux différents
          robots pour comprendre et afficher la page.-->
         <meta charset="utf-8" /> <!-- Encodage UTF-8 qui gère l'affichage des caractères speciaux-->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"><!--Contrôle de l'affichage pour les petits écrans-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--Contrôle de l'affichage pour les petits écrans-->
         <link rel="stylesheet" href="css/normalize.css" /><!-- Chargement du fichier Css associé-->
         <link rel="stylesheet" href="css/style.css" /><!-- Chargement du fichier Css associé-->
         <link rel="stylesheet" href="assets/icones/css/all.css" /> <!--Chargement icones Font Awesome -->
@@ -49,14 +49,15 @@
             <div id="filter-bloc">
                 <p>Filtres</p>     
                 <div id="filters">
-                    <div class="filtericons-container"><span class="ico-background"><span id="eco-icon"></span></span>Économique</div>
-                    <div class="filtericons-container"><span class="ico-background"><span id="kid-icon"></span></span>Familial</div>
-                    <div class="filtericons-container"><span class="ico-background"><span id="love-icon"></span></span>Romantique</div>
-                    <div class="filtericons-container"><span class="ico-background"><span id="dog-icon"></span></span>Animaux autorisés</div>
+                    <div class="filtericons-container"><span class="ico-background"><span id="eco-icon"></span></span><h4>Économique</h4></div>
+                    <div class="filtericons-container"><span class="ico-background"><span id="kid-icon"></span></span><h4>Familial</h4></div>
+                    <div class="filtericons-container"><span class="ico-background"><span id="love-icon"></span></span><h4>Romantique</h4></div>
+                    <div class="filtericons-container"><span class="ico-background"><span id="dog-icon"></span></span><h4>Animaux autorisés</h4></div>
                 </div>
             </div>
             <div class="info"><span class="info-ico-background"><span id="info-icon"></span></span><p>Plus de 500 logements sont disponibles dans cette ville</p></div>
-        </section>            
+        </section>    
+      <div id="lodgings-plus-popular-bloc">
         <section class="lodgingcards-bloc">
             <h1>Hébergements à Marseille</h1>
             <div id="lodging-cards">
@@ -81,33 +82,33 @@
                 <div class="lodginginfos-container">
                     <a href="#" class="clickable-card">
                     <picture class="lodgings-img-container">
-                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <img src="assets/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière">
+                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+                            <img src="assets/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>     
                     <div class="lodgings-text-container">
-                        <h3>Auberge La Cannebière</h3>
-                        <p>Nuit à partir de <strong>25€</strong></p> <!-- balise strong pour mise en avant d'un prix attractif -->
-                        <span class="bluestar-ico"><span class="greystar-ico"></span></span>
+                        <h3>Hôtel du port</h3>
+                        <p>Nuit à partir de 52€</p> 
+                        <span class="bluestar-ico"><span class="onebluestar-ico"></span></span>
                     </div>
                     </a>
                 </div>
                 <div class="lodginginfos-container">
                     <a href="#" class="clickable-card">
                     <picture class="lodgings-img-container">
-                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <img src="assets/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière">
+                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
+                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg">
+                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/reisetopia-B8WIgxA_PFU-unsplash.jpg">
+                            <img src="assets/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>     
                     <div class="lodgings-text-container">
-                        <h3>Auberge La Cannebière</h3>
-                        <p>Nuit à partir de <strong>25€</strong></p> <!-- balise strong pour mise en avant d'un prix attractif -->
+                        <h3>Hôtel Les mouettes</h3>
+                        <p>Nuit à partir de 76€</p> 
                         <span class="bluestar-ico"><span class="greystar-ico"></span></span>
                     </div>
                     </a>
@@ -117,16 +118,33 @@
                 <div class="lodginginfos-container">
                     <a href="#" class="clickable-card">
                     <picture class="lodgings-img-container">
-                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <img src="assets/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière">
+                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                            <img src="assets/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>     
                     <div class="lodgings-text-container">
-                        <h3>Auberge La Cannebière</h3>
-                        <p>Nuit à partir de <strong>25€</strong></p> <!-- balise strong pour mise en avant d'un prix attractif -->
+                        <h3>Hôtel de la mer</h3>
+                        <p>Nuit à partir de 46€</p> 
+                        <span class="onebluestar-ico"><span class="onebluestar-ico"><span class="onebluestar-ico"><span class="greystar-ico"><span class="greystar-ico"></span></span></span></span></span>
+                    </div>
+                    </a>
+                </div>
+                <div class="lodginginfos-container">
+                    <a href="#" class="clickable-card">
+                    <picture class="lodgings-img-container">
+                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+                            <img src="assets/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
+                            <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
+                            je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
+                    </picture>     
+                    <div class="lodgings-text-container">
+                        <h3>Auberge Le Panier</h3>
+                        <p>Nuit à partir de <strong>23€</strong></p> <!-- balise strong pour mise en avant d'un prix attractif -->
                         <span class="bluestar-ico"><span class="greystar-ico"></span></span>
                     </div>
                     </a>
@@ -134,44 +152,99 @@
                 <div class="lodginginfos-container">
                     <a href="#" class="clickable-card">
                     <picture class="lodgings-img-container">
-                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <img src="assets/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière">
+                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+                            <img src="assets/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>     
                     <div class="lodgings-text-container">
-                        <h3>Auberge La Cannebière</h3>
-                        <p>Nuit à partir de <strong>25€</strong></p> <!-- balise strong pour mise en avant d'un prix attractif -->
-                        <span class="bluestar-ico"><span class="greystar-ico"></span></span>
-                    </div>
-                    </a>
-                </div>
-                <div class="lodginginfos-container">
-                    <a href="#" class="clickable-card">
-                    <picture class="lodgings-img-container">
-                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <img src="assets/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière">
-                            <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
-                            je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
-                    </picture>     
-                    <div class="lodgings-text-container">
-                        <h3>Auberge La Cannebière</h3>
-                        <p>Nuit à partir de <strong>25€</strong></p> <!-- balise strong pour mise en avant d'un prix attractif -->
-                        <span class="bluestar-ico"><span class="greystar-ico"></span></span>
+                        <h3>Hôtel chez Amina</h3>
+                        <p>Nuit à partir de 96€</p> 
+                        <span class="bluestar-ico"><span class="onebluestar-ico"></span></span>
                     </div>
                     </a>
                   </div>  
                 </div>
-
+                <p class="lonely-text">Afficher plus</p>        
                 
             </div>
+        </section>
 
+        <section class="popularcards-bloc">
+            <div id="popular-title">
+                <h3>Les plus populaires</h3>
+                <span class="graph-ico"></span>
+            </div>
+            <div id="popular-cards">
+                <div class="popularinfos-container">
+                    <picture class="popular-img-container">
+                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                            <img src="assets/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
+                            <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
+                            je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
+                    </picture>    
+                    <a href="#" class="popular-text-container" class="clickable-card">
+                    <!--Nécessité(?) de mettre 2 classes dans la même division pour rendre la card clickable-->
+                        <div class="top-text" >
+                            <h3>Hôtel Le soleil du matin</h3>
+                            <p>Nuit à partir de 128€</p> 
+                        </div>
+                        <div class="bottom-stars">
+                            <span class="bluestar-ico"><span class="onebluestar-ico"></span></span>
+                        </div>
+                    </a>
+                </div>
+                <div class="popularinfos-container">
+                    <picture class="popular-img-container">
+                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                            <img src="assets/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
+                            <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
+                            je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
+                    </picture>    
+                    <a href="#" class="popular-text-container" class="clickable-card">
+                    <!--Nécessité(?) de mettre 2 classes dans la même division pour rendre la card clickable-->
+                        <div class="top-text" >
+                            <h3>Hôtel Le soleil du matin</h3>
+                            <p>Nuit à partir de 128€</p> 
+                        </div>
+                        <div class="bottom-stars">
+                            <span class="bluestar-ico"><span class="onebluestar-ico"></span></span>
+                        </div>
+                    </a>
+                </div>
+                <div class="popularinfos-container">
+                    <picture class="popular-img-container">
+                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                            <img src="assets/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
+                            <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
+                            je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
+                    </picture>    
+                    <a href="#" class="popular-text-container" class="clickable-card">
+                    <!--Nécessité(?) de mettre 2 classes dans la même division pour rendre la card clickable-->
+                        <div class="top-text" >
+                            <h3>Hôtel Le soleil du matin</h3>
+                            <p>Nuit à partir de 128€</p> 
+                        </div>
+                        <div class="bottom-stars">
+                            <span class="bluestar-ico"><span class="onebluestar-ico"></span></span>
+                        </div>
+                    </a>
+                </div>
+
+
+
+            </div>
 
         </section>
+       </div>
       </main>
 
       <footer>
