Main Responsive Design

--- a/index.html
+++ b/index.html
@@ -200,41 +200,41 @@
                 </div>
                 <div class="popularinfos-container">
                     <picture class="popular-img-container">
-                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-                            <img src="assets/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
+                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
+                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg">
+                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg">
+                            <img src="assets/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au cœur de l'eau Chambres d'hôtes">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>    
                     <a href="#" class="popular-text-container" class="clickable-card">
                     <!--Nécessité(?) de mettre 2 classes dans la même division pour rendre la card clickable-->
                         <div class="top-text" >
-                            <h3>Hôtel Le soleil du matin</h3>
-                            <p>Nuit à partir de 128€</p> 
+                            <h3>Au cœur de l'eau Chambres d'hôtes</h3>
+                            <p>Nuit à partir de 71€</p> 
                         </div>
                         <div class="bottom-stars">
-                            <span class="bluestar-ico"><span class="onebluestar-ico"></span></span>
+                            <span class="bluestar-ico"><span class="greystar-ico"></span></span>
                         </div>
                     </a>
                 </div>
                 <div class="popularinfos-container">
                     <picture class="popular-img-container">
-                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-                            <img src="assets/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
+                            <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
+                            <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
+                            <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
+                            <img src="assets/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et Blanc">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>    
                     <a href="#" class="popular-text-container" class="clickable-card">
                     <!--Nécessité(?) de mettre 2 classes dans la même division pour rendre la card clickable-->
                         <div class="top-text" >
-                            <h3>Hôtel Le soleil du matin</h3>
-                            <p>Nuit à partir de 128€</p> 
+                            <h3>Hôtel Tout bleu et Blanc</h3>
+                            <p>Nuit à partir de 68€</p> 
                         </div>
                         <div class="bottom-stars">
-                            <span class="bluestar-ico"><span class="onebluestar-ico"></span></span>
+                            <span class="bluestar-ico"><span class="greystar-ico"></span></span>
                         </div>
                     </a>
                 </div>
