--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head><!-- Titre de la page et informations encodage, ect...-->
         <!-- L’élément HTML meta est utilisé pour définir des métadonnées pour un document HTML.
          Une métadonnée est une donnée qui ne va pas être affiché sur la page mais qui va pouvoir servir aux différents
          robots pour comprendre et afficher la page.-->
         <meta charset="utf-8" /> <!-- Encodage UTF-8 qui gère l'affichage des caractères speciaux-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--Contrôle de l'affichage pour les petits écrans-->
-        <link rel="stylesheet" href="css/normalize.css" /><!-- Chargement du fichier Css associé-->
         <link rel="stylesheet" href="css/style.css" /><!-- Chargement du fichier Css associé-->
         <link rel="stylesheet" href="assets/icones/css/all.css" /> <!--Chargement icones Font Awesome -->
         <title>Booki.com</title> <!-- Très important, c'est ce qui s'affiche dans les résultats de recherche.-->
@@ -238,13 +237,100 @@
                         </div>
                     </a>
                 </div>
+            </div>
+        </section>
+       </div>
 
-
-
+        <section class="activities-bloc">
+            <div id="activities-title">
+                <h2>Activités à Marseille</h2>
+            </div>
+            <div id="activities-cards">
+                <a href="#" class="vieuxport-bloc" class="clickable-card">
+                    <picture class="activities-img-container">
+                            <source media="(max-width: 768px)" srcset="assets/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
+                            <source media="(max-width: 992px)" srcset="assets/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
+                            <source media="(min-width: 1920px)" srcset="assets/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
+                            <img src="assets/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Le Vieux Port de Marseille">
+                            <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
+                            je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
+                    </picture>    
+                    <div class="bloc-name" >
+                            <h3>Vieux Port</h3>
+                    </div>
+                </a>
+                <div id="activities-group1">
+                    <a href="#" class="fortpomegues-bloc" class="clickable-card">
+                        <picture class="activities-img-container-fortpomegues">
+                                <source media="(max-width: 768px)" srcset="assets/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
+                                <source media="(max-width: 992px)" srcset="assets/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
+                                <source media="(min-width: 1920px)" srcset="assets/activites/1_xlarge/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
+                                <img src="assets/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Le Fort de Pomègues à Marseille">
+                                <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
+                                je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
+                        </picture>    
+                        <div class="bloc-name" >
+                                <h3>Fort de Pomègues</h3>
+                        </div>
+                    </a>
+                    <a href="#" class="frioulisland-bloc" class="clickable-card">
+                        <picture class="activities-img-container-frioulisland">
+                                <source media="(max-width: 768px)" srcset="assets/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
+                                <source media="(max-width: 992px)" srcset="assets/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
+                                <source media="(min-width: 1920px)" srcset="assets/activites/1_xlarge/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
+                                <img src="assets/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
+                                <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
+                                je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
+                        </picture>    
+                        <div class="bloc-name" >
+                                <h3>Îles du Frioul</h3>
+                        </div>
+                    </a>
+                </div>
+                <a href="#" class="calanques-bloc" class="clickable-card">
+                    <picture class="activities-img-container">
+                            <source media="(max-width: 768px)" srcset="assets/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
+                            <source media="(max-width: 992px)" srcset="assets/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
+                            <source media="(min-width: 1920px)" srcset="assets/activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
+                            <img src="assets/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Le Parc National des Calanques">
+                            <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
+                            je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
+                    </picture>    
+                    <div class="bloc-name" >
+                            <h3>Parc National des Calanques</h3>
+                    </div>
+                </a>
+                <div id="activities-group2">
+                    <a href="#" class="notredame-bloc" class="clickable-card">
+                        <picture class="activities-img-container-notredame">
+                                <source media="(max-width: 768px)" srcset="assets/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg">
+                                <source media="(max-width: 992px)" srcset="assets/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg">
+                                <source media="(min-width: 1920px)" srcset="assets/activites/1_xlarge/florian-wehde-xW9e8gdotxI-unsplash.jpg">
+                                <img src="assets/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
+                                <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
+                                je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
+                        </picture>    
+                        <div class="bloc-name" >
+                                <h3>Notre-Dame-de-la-Garde</h3>
+                        </div>
+                    </a>
+                    <a href="#" class="longchamp-bloc" class="clickable-card">
+                        <picture class="activities-img-container-longchamp">
+                                <source media="(max-width: 768px)" srcset="assets/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg">
+                                <source media="(max-width: 992px)" srcset="assets/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg">
+                                <source media="(min-width: 1920px)" srcset="assets/activites/1_xlarge/lena-paulin-wH2-EJoDcV0-unsplash.jpg">
+                                <img src="assets/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Le Parc Longchamp à Marseille">
+                                <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
+                                je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
+                        </picture>    
+                        <div class="bloc-name" >
+                                <h3>Parc Longchamp</h3>
+                        </div>
+                    </a>
+                </div>
             </div>
 
         </section>
-       </div>
       </main>
 
       <footer>
