Responsive design Activities section

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </picture>         
        <nav>
         <ul id="nav-ul">
-            <li id="lodging-anchor" class="hover-blueline"> <a href="#A DETERMINER">Hébergements</a></li> <!-- Une id pour chaque ancre et une classe pour gérer le liseret bleu au survol souris */ -->
-            <li id="activities-anchor" class="hover-blueline"> <a href="#A DETERMINER">Activités</a></li>
+            <li id="lodging-anchor" class="hover-blueline"> <a href="#lodgings-plus-popular-bloc">Hébergements</a></li> <!-- Une id pour chaque ancre et une classe pour gérer le liseret bleu au survol souris */ -->
+            <li id="activities-anchor" class="hover-blueline"> <a href="#activities-title">Activités</a></li>
         </ul>
        </nav>
       </header>
