--- a/index.html
+++ b/index.html
@@ -329,19 +329,37 @@
                     </a>
                 </div>
             </div>
-
         </section>
       </main>
 
-      <footer>
+      <footer id="footer-bloc">
+        <div id="specific-width">
+         <div class="footer-elements">
+             <h4>A propos</h4>
+             <ul>
+                 <li>Fonctionnement du site</li>
+                 <li>Conditions générales de vente</li>
+                 <li>Données et confidentialité</li>
+             </ul>
+         </div>
+         <div class="footer-elements">
+             <h4>Nos hébergements</h4>
+             <ul>
+                 <li>Charte qualité</li>
+                 <li>Soumettre votre hôtel</li>
+             </ul>
+         </div>
+         <div class="footer-elements">
+             <h4>Assistance</h4>
+             <ul>
+                 <li>Centre d'aide</li>
+                 <li>Nous contacter</li>
+             </ul>
+         </div>
+        </div>
+       </footer>
 
-    
-
-      </footer>
-
-
-     </div>
-
+     </div> <!--fermeture container-->
     </body>        
     
 </html>
